overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qcon-service
  labels:
    app: qcon
    tier: frontend
spec:
  type: NodePort
  selector:
    app: qcon
    tier: frontend
  ports:
  - port: 8000
    targetPort: 8000
