overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qcon-ingress
spec:
  rules:
  - host: "qcon-api.dev.ltc.bcit.ca"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qcon-api
            port:
              number: 8000
